// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches screenshot 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-bmmCCE-color-secondary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-chBTEJ-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-UIZmM-color-success c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-fMjTrh-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-eNqAek-color-warning c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dKsfPN-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-dodmCG-color-error c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-gURxYt-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-cmVdgU-size-sm c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-lXiLo-size-lg c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-bRdhPS-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-fvBNaZ c-fvBNaZ-jsOpSy-color-primary c-fvBNaZ-sKeyg-size-md c-fvBNaZ-dCRXRO-disabled-false c-fvBNaZ-cyBLNz-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
